deployments/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: 870165402940.dkr.ecr.us-east-1.amazonaws.com/django-pipeline:latest
          name: django
          ports:
            - containerPort: 8000
              name: gunicorn
